objects/Sales_Order__c/fields/Minimum_Disposal_Charge__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Disposal_Charge__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Minimum Disposal Charge</label>
    <type>Checkbox</type>
</CustomField>