objects/Sales_Order__c/fields/Minimum_Disposal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Disposal_Fee__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Minimum Disposal Fee</label>
    <type>Checkbox</type>
</CustomField>