objects/Sales_Order__c/fields/Name_of_Worker_Responsible2__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Worker_Responsible2__c</fullName>
    <formula>HYPERLINK(
  "/" &amp; Name_of_Worker_Responsible__c, 
  Name_of_Worker_Responsible__r.Description__c,
  "_self"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of Worker Responsible</label>
    <type>Text</type>
</CustomField>