objects/Sales_Order__c/fields/Name_of_Worker_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Worker_Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Worker Responsible</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Quotes/Orders</relationshipLabel>
    <relationshipName>Quotes_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>