objects/Sales_Order__c/fields/NAV_Job_No__c.field-meta.xml
<CustomField>
    <fullName>NAV_Job_No__c</fullName>
    <label>NAV Job No.</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>