objects/Sales_Order__c/fields/Net_Due_Day__c.field-meta.xml
<CustomField>
    <fullName>Net_Due_Day__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Net Due Day</label>
    <type>Checkbox</type>
</CustomField>