objects/Sales_Order__c/fields/Off_Specification__c.field-meta.xml
<CustomField>
    <fullName>Off_Specification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Off Specification</label>
    <type>Checkbox</type>
</CustomField>