objects/Sales_Order__c/fields/Operating_Expense_Cost_Pct__c.field-meta.xml
<CustomField>
    <fullName>Operating_Expense_Cost_Pct__c</fullName>
    <label>Operating Expense Cost %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>