objects/Sales_Order__c/fields/Order_Total_Amount_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Order_Total_Amount_Incl_Tax__c</fullName>
    <label>Order Total Amount Incl. Tax</label>
    <summarizedField>Sales_Order_Job_Task__c.Total_Amount_Incl_Tax__c</summarizedField>
    <summaryForeignKey>Sales_Order_Job_Task__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>