objects/Sales_Order__c/fields/Order_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Order_Total_Cost__c</fullName>
    <formula>Total_Cost__c + Overhead_Burden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>