objects/Sales_Order__c/fields/Order_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Order_Type_Description__c</fullName>
    <label>Order Type Description</label>
    <type>TextArea</type>
</CustomField>