objects/Sales_Order__c/fields/Overtime_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overtime Rate</label>
    <type>Checkbox</type>
</CustomField>