objects/Sales_Order__c/fields/Overtime_Rate_Description__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Rate_Description__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Overtime Rate Description</label>
    <type>Checkbox</type>
</CustomField>