objects/Sales_Order__c/fields/OwnerActive__c.field-meta.xml
<CustomField>
    <fullName>OwnerActive__c</fullName>
    <formula>Owner:User.IsActive = True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerActive</label>
    <type>Checkbox</type>
</CustomField>