objects/Sales_Order__c/fields/Pay_Rule__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pay_Rule__c.Type__c</field>
            <operation>equals</operation>
            <value>Prevailing Wage, Contract, Union</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pay_Rule__c</referenceTo>
    <relationshipLabel>Quotes/Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>