objects/Sales_Order__c/fields/PCReportRunner__c.field-meta.xml
<CustomField>
    <fullName>PCReportRunner__c</fullName>
    <formula>IF($User.Id  =  Project_Coordinator__r.User__r.Id  ||  $UserRole.Id = '00Ef4000000cRfl'
, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCReportRunner</label>
    <type>Checkbox</type>
</CustomField>