objects/Sales_Order__c/fields/Pending_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approval_Level__c</fullName>
    <label>Pending Approval Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>