objects/Sales_Order__c/fields/Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Phone_Ext__c</fullName>
    <description>Depreciated</description>
    <label>Phone Ext.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>