objects/Sales_Order__c/fields/PM_Hours__c.field-meta.xml
<CustomField>
    <fullName>PM_Hours__c</fullName>
    <label>PM Hours</label>
    <summarizedField>Sales_Line__c.UOM_Qty__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Line__c.Unit_of_Measure__c</field>
        <operation>equals</operation>
        <value>a0zf4000002GVkBAAW</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Line__c.Resource_Type__c</field>
        <operation>equals</operation>
        <value>a1Sf4000001MWTBEA4</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Line__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>