objects/Sales_Order__c/fields/Portal_Basis__c.field-meta.xml
<CustomField>
    <fullName>Portal_Basis__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Portal Basis</label>
    <type>Checkbox</type>
</CustomField>