objects/Sales_Order__c/fields/Portal_Basis_Adv__c.field-meta.xml
<CustomField>
    <fullName>Portal_Basis_Adv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Basis Adv</label>
    <type>Checkbox</type>
</CustomField>