objects/Sales_Order__c/fields/Prevailing_Wage_isChecked__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Wage_isChecked__c</fullName>
    <formula>IF(Prevailing_Wage_Job__c, "Yes", "No")</formula>
    <label>Prevailing Wage isChecked</label>
    <type>Text</type>
</CustomField>