objects/Sales_Order__c/fields/Prevailing_Wage_Job__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Wage_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevailing Wage Job</label>
    <type>Checkbox</type>
</CustomField>