objects/Sales_Order__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Pricing</label>
    <type>Checkbox</type>
</CustomField>