objects/Sales_Order__c/fields/Pricing_Group__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Group__c</fullName>
    <formula>TEXT(Bill_to_Customer_No__r.Pricing_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Group</label>
    <type>Text</type>
</CustomField>