objects/Sales_Order__c/fields/Project_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Project_Coordinator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Salesperson__c.Name</field>
            <operation>notEqual</operation>
            <value>HOU</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Quotes/Orders (Project Manager)</relationshipLabel>
    <relationshipName>Sales_Orders_PC</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>