objects/Sales_Order__c/fields/Purchase_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Amount__c</fullName>
    <label>Purchase Order Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>