objects/Sales_Order__c/fields/Quote_Contact__c.field-meta.xml
<CustomField>
    <fullName>Quote_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sales_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>