objects/Sales_Order__c/fields/Quote_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Quote_Contact_Email__c</fullName>
    <formula>Quote_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Contact Email</label>
    <type>Text</type>
</CustomField>