objects/Sales_Order__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One_Time</fullName>
                <default>true</default>
                <label>One Time</label>
            </value>
            <value>
                <fullName>Recurrence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>