objects/Sales_Order__c/fields/Quote_Valid_30__c.field-meta.xml
<CustomField>
    <fullName>Quote_Valid_30__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Quote Valid 30</label>
    <type>Checkbox</type>
</CustomField>