objects/Sales_Order__c/fields/Rate_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Rate_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Sheet</label>
    <referenceTo>Rate_Sheet__c</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>