objects/Sales_Order__c/fields/Rate_Time_Definitions__c.field-meta.xml
<CustomField>
    <fullName>Rate_Time_Definitions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Rate Time Definitions</label>
    <type>Checkbox</type>
</CustomField>