objects/Sales_Order__c/fields/Recordid__c.field-meta.xml
<CustomField>
    <fullName>Recordid__c</fullName>
    <formula>RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recordid</label>
    <type>Text</type>
</CustomField>