objects/Sales_Order__c/fields/Report_Parameter_Print_Estimate_Duration__c.field-meta.xml
<CustomField>
    <fullName>Report_Parameter_Print_Estimate_Duration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Parameter Print Estimate Duration</label>
    <type>Checkbox</type>
</CustomField>