objects/Sales_Order__c/fields/Report_Parameter_Print_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Parameter_Print_Type__c</fullName>
    <label>Report Parameter Print Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>