objects/Sales_Order__c/fields/Report_Runner_PM__c.field-meta.xml
<CustomField>
    <fullName>Report_Runner_PM__c</fullName>
    <formula>$User.Id  =   Project_Coordinator__r.User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Runner PM</label>
    <type>Checkbox</type>
</CustomField>