objects/Sales_Order__c/fields/S_C_Total__c.field-meta.xml
<CustomField>
    <fullName>S_C_Total__c</fullName>
    <label>S/C Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>