objects/Sales_Order__c/fields/Sage_Job_No__c.field-meta.xml
<CustomField>
    <fullName>Sage_Job_No__c</fullName>
    <label>Sage Job No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>