objects/Sales_Order__c/fields/Sales_Job_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Sales_Job_Task_Count__c</fullName>
    <label>Sales Job Task Count</label>
    <summaryForeignKey>Sales_Order_Job_Task__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>