objects/Sales_Order__c/fields/Sales_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Sales_Line_Count__c</fullName>
    <label>Sales Line Count</label>
    <summaryForeignKey>Sales_Line__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>