objects/Sales_Order__c/fields/Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Order_Type__c.Blocked__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order_Type__c</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>