objects/Sales_Order__c/fields/Sales_Quote__c.field-meta.xml
<CustomField>
    <fullName>Sales_Quote__c</fullName>
    <formula>From_Sales_Quote__r.CreatedBy.FirstName + ' ' + From_Sales_Quote__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Quote Created By</label>
    <type>Text</type>
</CustomField>