objects/Sales_Order__c/fields/ScheduledConfirmTotal__c.field-meta.xml
<CustomField>
    <fullName>ScheduledConfirmTotal__c</fullName>
    <label>ScheduledConfirmTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>