objects/Sales_Order__c/fields/Sent_to_EQAI_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_EQAI_Date__c</fullName>
    <label>Sent to EQAI Date</label>
    <type>DateTime</type>
</CustomField>