objects/Sales_Order__c/fields/Service_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Center_Code__c</fullName>
    <label>Service Center Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>