objects/Sales_Order__c/fields/Shippable_Containers__c.field-meta.xml
<CustomField>
    <fullName>Shippable_Containers__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Shippable Containers</label>
    <type>Checkbox</type>
</CustomField>