objects/Sales_Order__c/fields/Signature_Request_Pending__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signature Request Pending</label>
    <type>Checkbox</type>
</CustomField>