objects/Sales_Order__c/fields/Signature_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request_Status__c</fullName>
    <label>Signature Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Acceptance</fullName>
            </value>
            <value>
                <fullName>Customer Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Fail to Respond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>