objects/Sales_Order__c/fields/Site_Address_Changed__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Address Changed</label>
    <type>Checkbox</type>
</CustomField>