objects/Sales_Order__c/fields/Site_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sales_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>