objects/Sales_Order__c/fields/SO_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Created_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Created Date</label>
    <type>Date</type>
</CustomField>