objects/Sales_Order__c/fields/SO_Created_Date_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Created_Date_Scheduled_Date__c</fullName>
    <formula>SO_Created_Date__c &gt; T_M_Scheudled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Created Date&gt;Scheduled Date</label>
    <type>Checkbox</type>
</CustomField>