objects/Sales_Order__c/fields/SO_sent_to_EQAI__c.field-meta.xml
<CustomField>
    <fullName>SO_sent_to_EQAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SO sent to EQAI</label>
    <type>Checkbox</type>
</CustomField>