objects/Sales_Order__c/fields/SO_Submitted_to_EQAI__c.field-meta.xml
<CustomField>
    <fullName>SO_Submitted_to_EQAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SO Submitted to EQAI</label>
    <type>Checkbox</type>
</CustomField>