objects/Sales_Order__c/fields/SPO_Blank_Age_c_formula__c.field-meta.xml
<CustomField>
    <fullName>SPO_Blank_Age_c_formula__c</fullName>
    <formula>IF( ISBLANK(Customer_PO_No__c),
  NOW()   -  CreatedDate ,
 SPO_Created_Date__c  - CreatedDate 



)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPO Blank Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>