objects/Sales_Order__c/fields/SPO_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>SPO_Created_Date__c</fullName>
    <label>SPO Created Date</label>
    <type>DateTime</type>
</CustomField>