objects/Sales_Order__c/fields/SPO_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>SPO_Next_Steps__c</fullName>
    <label>SPO Next Steps</label>
    <length>250</length>
    <type>Text</type>
</CustomField>