objects/Sales_Order__c/fields/SPOTriggerDate__c.field-meta.xml
<CustomField>
    <fullName>SPOTriggerDate__c</fullName>
    <label>SPOTriggerDate</label>
    <type>Date</type>
</CustomField>