objects/Sales_Order__c/fields/Submit_for_Approval_At__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Approval_At__c</fullName>
    <label>Submit for Approval At</label>
    <type>DateTime</type>
</CustomField>