objects/Sales_Order__c/fields/T_M_Billing_Type_Count__c.field-meta.xml
<CustomField>
    <fullName>T_M_Billing_Type_Count__c</fullName>
    <label>T&amp;M Billing Type Count</label>
    <summaryFilterItems>
        <field>Sales_Order_Job_Task__c.Billing_Type__c</field>
        <operation>equals</operation>
        <value>T&amp;M</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Order_Job_Task__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>