objects/Sales_Order__c/fields/T_M_Scheudled_Date__c.field-meta.xml
<CustomField>
    <fullName>T_M_Scheudled_Date__c</fullName>
    <label>T&amp;M Scheduled Date</label>
    <type>Date</type>
</CustomField>