objects/Sales_Order__c/fields/Tax_Area__c.field-meta.xml
<CustomField>
    <fullName>Tax_Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tax Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Tax_Area__c.Blocked__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Tax_Area__c</referenceTo>
    <relationshipLabel>Quotes/Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>