objects/Sales_Order__c/fields/Term_Conditions_Opt20__c.field-meta.xml
<CustomField>
    <fullName>Term_Conditions_Opt20__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Term &amp; Conditions Opt. 20</label>
    <type>Checkbox</type>
</CustomField>