objects/Sales_Order__c/fields/The_Source_Job_No_Backup__c.field-meta.xml
<CustomField>
    <fullName>The_Source_Job_No_Backup__c</fullName>
    <label>The Source Job No. Backup</label>
    <length>30</length>
    <type>Text</type>
</CustomField>