objects/Sales_Order__c/fields/TodayDate__c.field-meta.xml
<CustomField>
    <fullName>TodayDate__c</fullName>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TodayDate</label>
    <type>Date</type>
</CustomField>