objects/Sales_Order__c/fields/Total_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin_Pct__c</fullName>
    <label>Total Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>