objects/Sales_Order__c/fields/Total_Profit_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit_Pct__c</fullName>
    <formula>If(Order_Total_Amount__c &lt;&gt; 0, Total_Profit__c / Order_Total_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>