objects/Sales_Order__c/fields/Unless_Superseded__c.field-meta.xml
<CustomField>
    <fullName>Unless_Superseded__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Unless Superseded</label>
    <type>Checkbox</type>
</CustomField>