objects/Sales_Order__c/fields/Waste_Disposal_And_Ancillary__c.field-meta.xml
<CustomField>
    <fullName>Waste_Disposal_And_Ancillary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Waste Disposal And Ancillary</label>
    <type>Checkbox</type>
</CustomField>