objects/Sales_Order__c/fields/Worker_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Worker_Responsible__c</fullName>
    <label>Worker Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>