objects/Sales_Order__c/recordTypes/Sales_Order.recordType-meta.xml
<RecordType>
    <fullName>Sales_Order</fullName>
    <active>true</active>
    <description>This record type is used to create Sales Orders</description>
    <label>Sales Order</label>
</RecordType>